--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -24,4 +24,6 @@ jobs:
         run: npm install
 
       - name: Start Bot
+        env:
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
         run: npm start
